<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".Calculator"
              android:background="#fff" >

    <TextView
            android:id="@+id/txtScreen"
            android:text="@string/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="right|center_vertical"
            android:maxLength="20"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:typeface="serif" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtScreen"
            android:orientation="vertical">

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:paddingTop="20dp">

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/seven"
                android:background="@drawable/button"
                android:text="@string/seven" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/eight"
                android:background="@drawable/button"
                android:text="@string/eight" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/nine"
                android:background="@drawable/button"
                android:text="@string/nine" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/div"
                android:background="@drawable/button"
                android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:paddingTop="20dp">

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/four"
                android:background="@drawable/button"
                android:text="@string/four" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/five"
                android:background="@drawable/button"
                android:text="@string/five" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/six"
                android:background="@drawable/button"
                android:text="@string/six" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/mul"
                android:background="@drawable/button"
                android:text="@string/multiply" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:paddingTop="20dp">

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/one"
                android:background="@drawable/button"
                android:text="@string/one" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/two"
                android:background="@drawable/button"
                android:text="@string/two" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/three"
                android:background="@drawable/button"
                android:text="@string/three" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/sub"
                android:background="@drawable/button"
                android:text="@string/subtract" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:paddingTop="20dp">

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/cancel"
                android:background="@drawable/button"
                android:text="@string/cancel" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/zero"
                android:background="@drawable/button"
                android:text="@string/zero" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/equal"
                android:background="@drawable/button"
                android:text="@string/equal" />

        <Button android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:id = "@+id/add"
                android:background="@drawable/button"
                android:text="@string/addition" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>

